# xivapi2

./: README.rst  main.py  pyproject.toml  pytest.ini  test.py  test2.py
docs/: index.rst  requirements.txt
tests/: test_get_asset.py  test_get_map.py  test_get_row.py  test_search.py  test_sheet_rows.py  test_sheets.py  test_version_names.py
xivapi2/: __init__.py  client.py  models.py  query.py  utils.py
