[tool.ruff]
line-length = 99

[project]
name = "xivapi2"
version = "0.1.0dev1"
description = "In early development, not ready for production use."
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pillow>=11.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "twine>=6.1.0",
]
